--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dotenv-flow": "^4.1.0",
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
   "devDependencies": {
