--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dotenv-flow": "^4.1.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
     "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-ejs-layouts": "^2.5.4",
     "@types/node": "^22.1.0",
     "@types/pg": "^8.11.6",
     "ts-node-dev": "^2.0.0",
