--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -21,6 +22,7 @@
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/node": "^22.1.0",
     "@types/pg": "^8.11.6",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
