--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
     "pg": "^8.12.0",
     "uuid": "^10.0.0"
   },
@@ -20,6 +21,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-ejs-layouts": "^2.5.4",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^22.1.0",
     "@types/pg": "^8.11.6",
     "@types/uuid": "^10.0.0",
